# youtube-video-notes

./: .gitignore  README.md  package-lock.json  package.json
backend/: .gitignore  check_redis.py  main.py  pyproject.toml
backend/clients/: qdrant.py
backend/ingestion/: chunking.py  embedder.py
backend/query/: formatting.py  retrieval.py  router.py  summarizer.py
backend/rag/: router.py  service.py
backend/utils/: ai_handler.py  youtube.py
backend/workflows/: ingest_graph.py  query_graph.py  runner.py  states.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  trigger.config.ts
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20250626120000_init/: migration.sql
frontend/prisma/migrations/20250630180000_eval_runs/: migration.sql
frontend/prisma/migrations/20250701154500_eval_examples_db/: migration.sql
frontend/prisma/migrations/20250701162500_eval_examples_by_source/: migration.sql
frontend/prisma/migrations/20250702120000_eval_jobs/: migration.sql
frontend/prisma/migrations/20250702154500_eval_dataset_json/: migration.sql
frontend/scripts/: eval-worker.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/chats/: page.tsx
frontend/src/components/: AppHeader.tsx
frontend/src/context/: AuthContext.tsx  ChatListContext.tsx  ThemeContext.tsx  VideoPlayerContext.tsx
frontend/src/lib/: auth-session.ts  auth.ts  chats.ts  features.ts  videos.ts  youtube.ts
frontend/src/trigger/: run-eval-job.ts
frontend/src/types/: ui.ts
(+128 files in other folders)
