[project]
name = "youtube-rag"
version = "0.1.0"
description = "YouTube RAG backend with LangGraph workflows"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "fastapi[standard]>=0.100.0",
    "uvicorn>=0.23.0",
    "youtube-transcript-api>=0.6.2",
    "qdrant-client>=1.7.0",
    "tenacity>=8.4.1",
    "langchain-text-splitters>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "google-api-core",
]
